--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -7882,7 +7882,7 @@ after time</property>
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">False</property>
                                                             <property name="xalign">0</property>
-                                                            <property name="label" translatable="yes">Last run</property>
+                                                            <property name="label" translatable="yes">Last lap</property>
                                                             <property name="justify">center</property>
                                                             </widget>
                                                             <packing>
